--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -22,11 +22,12 @@
 }
 .main-title {
   margin: 0 auto;
-  width: 40%;
+  width: 250px;
   border-left: 3px solid black;
   border-right: 3px solid black;
 }
 
-.button-container {
-  text-align: center;
+.login-button {
+  display: flex;
+  justify-content: center;
 }
