--- a/src/containers/NewCard/NewCard.css
+++ b/src/containers/NewCard/NewCard.css
@@ -4,7 +4,7 @@
 
 .card-title,
 .card-text {
-  color: #fff;
+  color: #000000;
   position: absolute;
   text-align: center;
 }
@@ -16,4 +16,9 @@
   right: 0;
   margin: 0;
   padding: 0;
+}
+
+Jumbotron {
+  background-color: transparent;
+  text-align: center;
 }
