--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -2,10 +2,13 @@
   margin-top: 50px;
 }
 
-.social-media-container {
-  height: 3.5em;
+.navbar {
   background-color: aquamarine;
-  padding: 0.5em;
+}
+
+.logo {
+  position: absolute;
+  left: 49%;
 }
 
 .twitter {
