--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -2,25 +2,25 @@
   margin-top: 50px;
 }
 
+.social-media-container {
+  background-color: aquamarine;
+}
+
 .twitter {
   height: 25px;
-  float: left;
-  margin: 0px 8px;
-  margin-top: 2px;
-  margin-left: 0px;
+  float: right;
+  margin: 20px;
 }
 
 .description > .lead {
-  font-size: 1.25rem;
+  font-size: 12px;
   text-align: center;
 }
 
 .main-title-container {
   margin: 20px auto;
 }
-
 .main-title {
-  font-size: 4.5rem;
   margin: 0 auto;
   width: 40%;
   border-left: 3px solid black;
