--- a/src/containers/Results/Results.css
+++ b/src/containers/Results/Results.css
@@ -1,8 +1,3 @@
-.twitter {
-  float: right;
-  margin: 5px 20px 20px 20px;
-}
-  
 .header {
   text-align: center;
   margin: 10px 0 0 70px;
@@ -11,4 +6,13 @@
 h3 {
   text-align: center;
 }
-  
+
+.results-jumbotron {
+    height: 8em;
+}
+
+.results {
+    text-align: center;
+    line-height: 0px;
+    font-size: 48px;
+}
