--- a/src/components/NewCard/NewCard.css
+++ b/src/components/NewCard/NewCard.css
@@ -1,5 +1,10 @@
-.card-container {
-  position: relative;
+.card-container Button {
+  width: 100%;
+  float: bottom;
+}
+
+.card-img-overlay {
+  padding: 1.25rem;
 }
 
 .card-title,
