--- a/src/containers/Landing/Landing.css
+++ b/src/containers/Landing/Landing.css
@@ -1,3 +1,7 @@
+.Landing {
+  background-color: #C0C0C0;
+}
+
 .social-media {
   margin-top: 50px;
 }
@@ -29,4 +33,8 @@
 
 .button-container {
   text-align: center;
+}
+
+.whiteAF {
+  font-color: white;
 }
